--- a/app/src/main/res/layout/activity_foods.xml
+++ b/app/src/main/res/layout/activity_foods.xml
@@ -26,7 +26,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="300dp"
-            android:src="@drawable/GoodFood"
+            android:src="@drawable/goodfood"
             android:adjustViewBounds="false"
             android:scaleType="fitXY"
             />
@@ -38,6 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
+
 
     </GridLayout>
 
