--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+<LinearLayout
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
@@ -17,11 +22,12 @@
         android:textOff="lIGHT ON"
         android:textOn="LIGHT OFF"
         android:layout_gravity="center"
+        android:background="@android:color/black"
         android:textColor="#FFFFFF"
-        android:backgroundTint="@color/black"
         />
 
     <TextView
+        android:id="@+id/title_search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Search for your favorite recipes:"
@@ -85,7 +91,7 @@
         android:layout_width="match_parent"
         android:layout_height="208dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/GoodFood"
+        android:background="@drawable/goodfood"
         android:orientation="vertical">
 
         <TextView
@@ -139,11 +145,13 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/select_food"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Select the type of food:"
             android:textAlignment="center"
-            android:textSize="20dp" />
+            android:textSize="20dp"
+            />
 
         <Spinner
             android:id="@+id/cuisine_spinner"
@@ -152,16 +160,73 @@
             android:entries="@array/cuisine_array"
             android:padding="10dp"
             android:textAlignment="center"
-
+            android:layout_marginBottom="5dp"
             />
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/MinimalistFood"
+            android:src="@drawable/minimalistfood"
+            />
+
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="5dp"
+        >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:text="Resume of the search:"
+            android:textSize="20dp"
+            />
+
+        <TextView
+            android:id="@+id/results_search"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:text="Result of the search:"
+            android:textSize="15dp"
+            />
+
+        <TextView
+            android:id="@+id/results_preferences"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:text="Preferences:"
+            android:textSize="15dp"
+            />
+
+        <TextView
+            android:id="@+id/results_sorting"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:text="Sorting category:"
+            android:textSize="15dp"
+            />
+
+        <TextView
+            android:id="@+id/results_type"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:text="Type of food:"
+            android:textSize="15dp"
             />
 
     </LinearLayout>
 
 
+
 </LinearLayout>
+</ScrollView>
